Replace placeholder API key with actual key
Updated API key in index.html.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ button:hover {
 let currentTask = "";
 let level = 1;
 let exp = 0;
-const API_KEY = "YOUR_GEMINI_API_KEY"; // 替換你的金鑰
+const API_KEY = "AIzaSyA1qz0SSfgtykSctZ35rhLI1IesiSxN4UQ"; // 替換你的金鑰
 
 async function generateTask() {
   const prompt = "生成一個可愛、有趣、簡短的英文或程式學習挑戰。";
